Fix dashboard path mismatch (config/ -> apps/)

--- a/apps/dashboard/index.html
+++ b/apps/dashboard/index.html
@@ -308,23 +308,35 @@
 
     <main>
       <div class="grid" id="grid">
-            <a href="https://drive.localhost" class="tile" target="_blank">
+            <a href="https://dockge.localhost" class="tile" target="_blank">
+      <div class="tile-icon">🏗️</div>
+      <div class="tile-name">Dockge</div>
+    </a>
+    <a href="https://drive.localhost" class="tile" target="_blank">
       <div class="tile-icon">📁</div>
       <div class="tile-name">Filebrowser</div>
     </a>
-    <a href="https://monitor.localhost" class="tile" target="_blank">
+    <a href="https://monitor.localhost" class="tile" target="_blank">
       <div class="tile-icon">🖥️</div>
       <div class="tile-name">Glances</div>
     </a>
-    <a href="https://docker.localhost" class="tile" target="_blank">
+    <a href="https://play.localhost" class="tile" target="_blank">
+      <div class="tile-icon">🍿</div>
+      <div class="tile-name">Jellyfin</div>
+    </a>
+    <a href="https://docker.localhost" class="tile" target="_blank">
       <div class="tile-icon">🐳</div>
       <div class="tile-name">Portainer</div>
     </a>
-    <a href="https://seed.localhost" class="tile" target="_blank">
+    <a href="https://seed.localhost" class="tile" target="_blank">
       <div class="tile-icon">⬇️</div>
       <div class="tile-name">Qbittorrent</div>
     </a>
-    <a href="https://status.localhost" class="tile" target="_blank">
+    <a href="https://pdf.localhost" class="tile" target="_blank">
+      <div class="tile-icon">📄</div>
+      <div class="tile-name">Stirling Pdf</div>
+    </a>
+    <a href="https://status.localhost" class="tile" target="_blank">
       <div class="tile-icon">📊</div>
       <div class="tile-name">Uptime Kuma</div>
     </a>
